--- a/.github/workflows/coodesh.yml
+++ b/.github/workflows/coodesh.yml
@@ -15,12 +15,14 @@ jobs:
     if:  ${{ inputs.tfpath }} 
     steps:
     - uses: actions/checkout@v2.5.0
+    
     - name: AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1 
+    
     - name: Setup Terraform CLI
       uses: hashicorp/setup-terraform@v2.0.2
 
@@ -37,12 +39,13 @@ jobs:
         echo "** Running Terraform Plan**"
         terraform plan
 
-#        echo "** Running Terraform Apply**"
-#        terraform apply -auto-approve
+        echo "** Running Terraform Apply**"
+        terraform apply -auto-approve
       working-directory: ${{ github.event.inputs.tfpath }}
-    - name: Terraform Destroy
-      run: |
-        echo "** Running Terraform Destroy**"
-        terraform plan -destroy
+
+#    - name: Terraform Destroy
+#      run: |
+#        echo "** Running Terraform Destroy**"
+#        terraform plan -destroy
 #        terraform destroy -auto-approve
-      working-directory: ${{ github.event.inputs.tfpath }}
+#      working-directory: ${{ github.event.inputs.tfpath }}
