--- a/.github/workflows/coodesh.yml
+++ b/.github/workflows/coodesh.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         echo `pwd`
         echo "tfpath ${{ github.event.inputs.tfpath }}"
+        
         echo "** Running Terraform Init**"
         terraform init
 
@@ -39,13 +40,13 @@ jobs:
         echo "** Running Terraform Plan**"
         terraform plan
 
-#        echo "** Running Terraform Apply**"
-#        terraform apply -auto-approve
-#      working-directory: ${{ github.event.inputs.tfpath }}
-
-    - name: Terraform Destroy
-      run: |
-        echo "** Running Terraform Destroy**"
-        terraform plan -destroy
-        terraform destroy -auto-approve
+        echo "** Running Terraform Apply**"
+        terraform apply -auto-approve
       working-directory: ${{ github.event.inputs.tfpath }}
+
+#    - name: Terraform Destroy
+#      run: |
+#        echo "** Running Terraform Destroy**"
+#        terraform plan -destroy
+#        terraform destroy -auto-approve
+#      working-directory: ${{ github.event.inputs.tfpath }}
