--- a/.github/workflows/coodesh.yml
+++ b/.github/workflows/coodesh.yml
@@ -37,16 +37,16 @@ jobs:
         echo "** Running Terraform Validate**"
         terraform validate
 
-        echo "** Running Terraform Plan**"
-        terraform plan
+#        echo "** Running Terraform Plan**"
+#        terraform plan
 
-        echo "** Running Terraform Apply**"
-        terraform apply -auto-approve
-      working-directory: ${{ github.event.inputs.tfpath }}
-
-#    - name: Terraform Destroy
-#      run: |
-#        echo "** Running Terraform Destroy**"
-#        terraform plan -destroy
-#        terraform destroy -auto-approve
+#        echo "** Running Terraform Apply**"
+#        terraform apply -auto-approve
 #      working-directory: ${{ github.event.inputs.tfpath }}
+
+    - name: Terraform Destroy
+      run: |
+        echo "** Running Terraform Destroy**"
+        terraform plan -destroy
+        terraform destroy -auto-approve
+      working-directory: ${{ github.event.inputs.tfpath }}
