--- a/.github/workflows/coodesh.yml
+++ b/.github/workflows/coodesh.yml
@@ -26,16 +26,16 @@ jobs:
     - name: Setup Terraform CLI
       uses: hashicorp/setup-terraform@v2.0.2
 
-    - name: Terraform init, plan and apply
-      run: |
-        echo `pwd`
-        echo "tfpath ${{ github.event.inputs.tfpath }}"
+#    - name: Terraform init, plan and apply
+#      run: |
+#        echo `pwd`
+#        echo "tfpath ${{ github.event.inputs.tfpath }}"
         
-        echo "** Running Terraform Init**"
-        terraform init -reconfigure
+#        echo "** Running Terraform Init**"
+#        terraform init -reconfigure
 
-        echo "** Running Terraform Validate**"
-        terraform validate
+#        echo "** Running Terraform Validate**"
+#        terraform validate
 
 #        echo "** Running Terraform Plan**"
 #        terraform plan
@@ -46,7 +46,14 @@ jobs:
 
     - name: Terraform Destroy
       run: |
+        echo "** Running Terraform Init**"
+        terraform init -reconfigure
+
+        echo "** Running Terraform Validate**"
+        terraform validate
+
         echo "** Running Terraform Destroy**"
         terraform plan -destroy
         terraform destroy -auto-approve
+
       working-directory: ${{ github.event.inputs.tfpath }}
